MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallementEvent__e/PaymentInstallementEvent__e.object-meta.xml
<CustomObject>
    <label>Payment Installement Event</label>
    <pluralLabel>Payment Installement Event</pluralLabel>
</CustomObject>