MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallementEvent__e/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>