MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallementEvent__e/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>