MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallementEvent__e/fields/Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Number__c</fullName>
    <label>Milestone Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>