MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallementEvent__e/fields/Payment_Installment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Installment__c</fullName>
    <label>Payment Installment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>